add edit and delete feature

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,12 +13,11 @@
                 thank to %- instead of %= you can type your post as html tags 
                 that will be displayed correctly -->
             </div>
-            <!--
-            <a class="ui orange basic button" href="/blogs/<%= post._id %>/edit">Edit</a>
-            <form id="delete" action="/blogs/<%= post._id %>?_method=DELETE" method="POST">
-                <button class="ui red basic button">Delete</button>
-            </form>-->
             <button class="ui red basic button"><a href="/">Go Back</a></button>
+            <a class="ui orange basic button" href="/posts/<%= post._id %>/edit">Edit</a>
+            <form id="delete" action="/posts/<%= post._id %>?_method=DELETE" method="POST">
+                <button class="ui red basic button">Delete</button>
+            </form>
         </div>
     </div>
     
